HLS/HLS/solution1/csim/report/network_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../../mnist_AXI_Stream.cpp in debug mode
csim.mk:75: recipe for target 'obj/mnist_AXI_Stream.o' failed
../../../../../mnist_AXI_Stream.cpp: In function ‘int network(axis*, axis*)’:
../../../../../mnist_AXI_Stream.cpp:93:51: error: ‘MemBank_B’ was not declared in this scope
  Padding2D_0_height, Padding2D_0_width, (int16_t*)MemBank_B);
                                                   ^~~~~~~~~
make: *** [obj/mnist_AXI_Stream.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
